# database_migration

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db_waiter.py  docker-compose.yml  main.py  pyproject.toml
migrator/: config.py  data_migrator.py  db_connectors.py  schema_reader.py  schema_transformer.py  schema_writer.py  utils.py
